--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: build
+name: CI
 
 on: [push, pull_request]
 
@@ -34,6 +34,11 @@ jobs:
 
       - name: Download Go modules
         run: go mod download
+
+      - name: Install Linux Dependencies
+          - if: matrix.os == 'ubuntu-latest'
+              run: |
+                apt-get install -y xdg-utils
 
       - name: Run Makefile
         run: make all
