--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Install Linux Dependencies
         if: matrix.os == 'ubuntu-latest'
         run: |
-          apt-get install -y xdg-utils
+          sudo apt-get install -y xdg-utils
 
       - name: Run Makefile
         run: make all
